import { relations, sql } from 'drizzle-orm';
import { bigint, boolean, foreignKey, index, primaryKey, text, timestamp, unique, uniqueIndex, uuid } from 'drizzle-orm/pg-core';
import { users } from '../identity/users/table';
import { userSplitInformation } from '../reminders/tables';
import { exercisetracking, workoutSummary } from '../tracking/tables';
import { workoutSchema } from '../schemas';
import { exercisesPolicies, exerciseToSplitPolicies, workoutplansPolicies, workoutsplitsPolicies } from './policies';

export const exercises = workoutSchema.table('exercises', { id: bigint('id', { mode: 'number' }).generatedByDefaultAsIdentity({ name: 'exercises_id_seq' }).notNull(), name: text('name').notNull(), description: text('description').notNull(), targetmuscle: text('targetmuscle').notNull(), specifictargetmuscle: text('specifictargetmuscle').notNull() }, (t) => [primaryKey({ name: 'exercises_pkey', columns: [t.id] }), uniqueIndex('exercises_name_unique').on(t.name), ...exercisesPolicies()]);
export const workoutplans = workoutSchema.table('workoutplans', { id: bigint('id', { mode: 'number' }).generatedByDefaultAsIdentity({ name: 'workoutplan_id_seq' }).notNull(), name: text('name').default('My Workout').notNull(), numberofsplits: bigint('numberofsplits', { mode: 'number' }).default(1).notNull(), createdAt: timestamp('created_at', { withTimezone: true }).defaultNow().notNull(), isDeleted: boolean('is_deleted').default(false).notNull(), level: text('level').default('Beginner').notNull(), userId: uuid('user_id').notNull(), trainerId: uuid('trainer_id'), isActive: boolean('is_active').default(true).notNull(), updatedAt: timestamp('updated_at', { withTimezone: true }).default(sql`now() AT TIME ZONE 'utc'`).notNull() }, (t) => [primaryKey({ name: 'workoutplan_pkey', columns: [t.id] }), foreignKey({ name: 'workoutplans_user_id_fkey', columns: [t.userId], foreignColumns: [users.id] }).onUpdate('cascade').onDelete('cascade'), foreignKey({ name: 'workoutplans_trainer_id_fkey', columns: [t.trainerId], foreignColumns: [users.id] }).onUpdate('cascade').onDelete('cascade'), uniqueIndex('uq_workoutplans_active_user').on(t.userId).where(sql`${t.isActive}`), ...workoutplansPolicies(t)]);
export const workoutsplits = workoutSchema.table('workoutsplits', { id: bigint('id', { mode: 'number' }).generatedByDefaultAsIdentity({ name: 'workoutsplits_id_seq' }).notNull(), workoutId: bigint('workout_id', { mode: 'number' }).notNull(), name: text('name').notNull(), createdAt: timestamp('created_at', { withTimezone: true }).defaultNow().notNull(), muscleGroup: text('muscle_group'), isActive: boolean('is_active').default(true).notNull() }, (t) => [primaryKey({ name: 'workoutsplits_pkey', columns: [t.id] }), unique('uq_workoutsplits_plan_name').on(t.workoutId, t.name), foreignKey({ name: 'workoutsplits_workout_id_fkey', columns: [t.workoutId], foreignColumns: [workoutplans.id] }).onUpdate('cascade').onDelete('cascade'), index('workoutsplits_workout_id_idx').on(t.workoutId), ...workoutsplitsPolicies(t)]);
export const exercisetoworkoutsplit = workoutSchema.table('exercisetoworkoutsplit', { id: bigint('id', { mode: 'number' }).generatedByDefaultAsIdentity({ name: 'ExerciseToWorkoutsplit_id_seq' }).notNull(), exerciseId: bigint('exercise_id', { mode: 'number' }).notNull(), workoutsplitId: bigint('workoutsplit_id', { mode: 'number' }).notNull(), createdAt: timestamp('created_at', { withTimezone: true }).defaultNow().notNull(), sets: bigint('sets', { mode: 'number' }).array().notNull(), orderIndex: bigint('order_index', { mode: 'number' }).notNull(), isActive: boolean('is_active').default(true).notNull() }, (t) => [primaryKey({ name: 'ExerciseToWorkoutsplit_pkey', columns: [t.id] }), unique('uq_ets_split_exercise').on(t.workoutsplitId, t.exerciseId), foreignKey({ name: 'ExerciseToWorkoutsplit_exercise_id_fkey', columns: [t.exerciseId], foreignColumns: [exercises.id] }).onUpdate('cascade').onDelete('cascade'), foreignKey({ name: 'ExerciseToWorkoutsplit_workoutsplit_id_fkey', columns: [t.workoutsplitId], foreignColumns: [workoutsplits.id] }).onUpdate('cascade').onDelete('cascade'), index('exercisetoworkoutsplit_active_idx').on(t.workoutsplitId, t.orderIndex).where(sql`${t.isActive} = true`), index('exercisetoworkoutsplit_workoutsplit_id_order_index_idx').on(t.workoutsplitId, t.orderIndex), ...exerciseToSplitPolicies(t)]);

export const exercisesRelations = relations(exercises, ({ many }) => ({ workoutSplitAssignments: many(exercisetoworkoutsplit) }));
export const workoutplansRelations = relations(workoutplans, ({ many, one }) => ({ owner: one(users, { fields: [workoutplans.userId], references: [users.id], relationName: 'workoutplanOwner' }), trainer: one(users, { fields: [workoutplans.trainerId], references: [users.id], relationName: 'workoutplanTrainer' }), splits: many(workoutsplits) }));
export const workoutsplitsRelations = relations(workoutsplits, ({ many, one }) => ({ workoutplan: one(workoutplans, { fields: [workoutsplits.workoutId], references: [workoutplans.id] }), exerciseAssignments: many(exercisetoworkoutsplit), workoutSummaries: many(workoutSummary), splitInformation: many(userSplitInformation) }));
export const exercisetoworkoutsplitRelations = relations(exercisetoworkoutsplit, ({ many, one }) => ({ exercise: one(exercises, { fields: [exercisetoworkoutsplit.exerciseId], references: [exercises.id] }), workoutsplit: one(workoutsplits, { fields: [exercisetoworkoutsplit.workoutsplitId], references: [workoutsplits.id] }), exerciseTrackings: many(exercisetracking) }));
