export interface ExerciseEntity {
  id: number;
  name: string;
  description: string;
  targetmuscle: string;
  specifictargetmuscle: string;
}
